--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,9 @@
                 <p>
                     Como nem só de pão vive o homem (Trocadilhos a parte! rsrs), deixaremos a nossa lista para que se sintam a vontade e possam nos ajudar a construir o nosso lar, o cantinho que viveremos felizes e que nos lembraremos desse dia e de todos vocês nesse momento especial!!
                 </p>
-                <a href="https://docs.google.com/spreadsheets/d/1ydlN50r8Q6l6GJ3cVzoOpcrMQHbxBw0tIetGeVS84UY/edit?usp=sharing" target="_blank" class="btn btn-default btn-lg">Lista de Casamento</a>
+                <!-- <a href="https://docs.google.com/spreadsheets/d/1ydlN50r8Q6l6GJ3cVzoOpcrMQHbxBw0tIetGeVS84UY/edit?usp=sharing" target="_blank" class="btn btn-default btn-lg">Lista na Fast Shop</a> -->
+                <a href="http://listadecasamento.fastshop.com.br/ListaCasamento/ListaCasamentoProdutos.aspx?ID=219367" target="_blank" class="btn btn-default btn-lg">Lista na Fast Shop</a>
+                <a href="https://docs.google.com/spreadsheets/d/1ydlN50r8Q6l6GJ3cVzoOpcrMQHbxBw0tIetGeVS84UY/edit?usp=sharing" target="_blank" class="btn btn-default btn-lg">Lista na Camicado</a>
             </div>
         </div>
     </section>
