mudanças na estrutura do site

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,24 +3,25 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>
-                    Você está convidado para o maior evento das nossas vidas!!
+                    Você está convidado para o mais lindo evento das nossas vidas!
                 </h2>
+                <h3>
+                    E aí, já sabe do que se trata?
+                </h3>
                 <p>
-                   Obrigado por participar desse momento de alegria, paixão, prazer e muito amor. Estamos realizando esse pequeno evento, para marcar a mudança das nossas vidas, para que tornemos público o nosso amor e a nossa vontade de nunca se separar.
+                    Sim! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós!
+                    Esse pequeno evento marca uma grande mudança em nossas vidas e tem por objetivo confraternizar a nossa união, o nosso amor e a nossa vontade de vivermos juntos e felizes para sempre!
                 </p>
                 <p>
-                    Esse é um grande passo em nossas vidas e ficaremos muito felizes com a participação de cada um de vocês!! Fizemos uma lista de presença, para que possamos ter a ciência de quantas pessoas irão comparecer e quantos quitutes e bebidas deveremos providenciar! Por gentileza, acesse o link e inclua o seu nome e das pessoas que irão te acompanhar!! =D
+                    A reunião será bastante simples e para pouquíssimos convidados, já que o nosso objetivo é, realmente, estar com aqueles que, de alguma forma, participaram da nossa história e torceram de perto por nós nesses quatro anos.
+                    Como você pode imaginar, esse é um grande passo em nossas vidas e ficaremos muito felizes com a participação de cada convidado!
+                    Fizemos uma <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg">LISTA DE PRESENÇA</a> para que possamos acompanhar quantas pessoas irão comparecer e quantos quitutes e bebidas devemos providenciar! 
+                    Por gentileza, acesse a <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg">LISTA</a> e inclua o seu nome e o nome de alguma pessoa que eventualmente te acompanhe! =D
                 </p>
-                <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg">Lista de Presença</a>
-                <p> </p>
                 <p>
-                    Como nem só de pão vive o homem (Trocadilhos a parte! rsrs), deixaremos a nossa lista para que se sintam a vontade e possam nos ajudar a construir o nosso lar, o cantinho que viveremos felizes e que nos lembraremos desse dia e de todos vocês nesse momento especial!!
+                    E, como nem só de pão vive o homem (trocadilhos a parte! rsrs), aproveitamos essa oportunidade para deixar aqui embaixo os links das nossas listas de presentes, elaboradas em três diferentes lugares para atender a todos os gostos!
+                    Sinta-se à vontade para nos ajudar a preencher nosso lar, sabendo que cada detalhe será muito bem-vindo! Com os mimos e a participação de cada um, montaremos o cantinho no qual viveremos felizes e nos lembraremos com muito carinho desse momento especial!!
                 </p>
-                <!-- <a href="https://docs.google.com/spreadsheets/d/1ydlN50r8Q6l6GJ3cVzoOpcrMQHbxBw0tIetGeVS84UY/edit?usp=sharing" target="_blank" class="btn btn-default btn-lg">Lista na Fast Shop</a> -->
-                <a href="http://listadecasamento.fastshop.com.br/ListaCasamento/ListaCasamentoProdutos.aspx?ID=219367" target="_blank" class="btn btn-default btn-lg">Lista na Fast Shop</a>
-                <a href="https://www.camicado.com.br/weddinglist/products/60318926" target="_blank" class="btn btn-default btn-lg">Lista na Camicado</a>
-                <a href="http://www2.zelo.com.br/weddinglistProducts.aspx?id=76637&idproduct=&qty=" target="_blank" class="btn btn-default btn-lg">Lista na Zelo</a>                
- 
             </div>
         </div>
     </section>
