--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,11 +3,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!--
-                    <h2>Não sei o que colocar</h2>
-                    <p>idéias?</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
-                    -->
+                    <a href="http://listadecasamento.fastshop.com.br/ListaCasamento/ListaCasamentoProdutos.aspx?ID=219367" target="_blank" class="btn btn-default btn-lg">Lista na Fast Shop</a>
+                    <a href="https://www.camicado.com.br/weddinglist/products/60318926" target="_blank" class="btn btn-default btn-lg">Lista na Camicado</a>
+                    <a href="http://www2.zelo.com.br/weddinglistProducts.aspx?id=76637&idproduct=&qty=" target="_blank" class="btn btn-default btn-lg">Lista na Zelo</a> 
                 </div>
             </div>
         </div>
