--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,13 +18,11 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Sobre</a>
+                        <a class="page-scroll" href="#about">Sobre o evento</a>
                     </li>
-                    <!--
                     <li>
-                        <a class="page-scroll" href="#download">Não sei</a>
+                        <a class="page-scroll" href="#download">Listas de presentes</a>
                     </li>
-                    -->
                     <li>
                         <a class="page-scroll" href="#contact">Data e Local</a>
                     </li>
