--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,8 +15,8 @@
                 <p>
                     A reunião será bastante simples e para pouquíssimos convidados, já que o nosso objetivo é, realmente, estar com aqueles que, de alguma forma, participaram da nossa história e torceram de perto por nós nesses quatro anos.
                     Como você pode imaginar, esse é um grande passo em nossas vidas e ficaremos muito felizes com a participação de cada convidado!
-                    Fizemos uma <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg">LISTA DE PRESENÇA</a> para que possamos acompanhar quantas pessoas irão comparecer e quantos quitutes e bebidas devemos providenciar! 
-                    Por gentileza, acesse a <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg">LISTA</a> e inclua o seu nome e o nome de alguma pessoa que eventualmente te acompanhe! =D
+                    Fizemos uma <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg"> LISTA DE PRESENÇA </a> para que possamos acompanhar quantas pessoas irão comparecer e quantos quitutes e bebidas devemos providenciar! 
+                    Por gentileza, acesse a lista e inclua o seu nome e o nome de alguma pessoa que eventualmente te acompanhe! =D
                 </p>
                 <p>
                     E, como nem só de pão vive o homem (trocadilhos a parte! rsrs), aproveitamos essa oportunidade para deixar aqui embaixo os links das nossas listas de presentes, elaboradas em três diferentes lugares para atender a todos os gostos!
