--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,19 +9,53 @@
                     E aí, já sabe do que se trata?
                 </h3>
                 <p>
-                    Sim! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós!
-                    Esse pequeno evento marca uma grande mudança em nossas vidas e tem por objetivo confraternizar a nossa união, o nosso amor e a nossa vontade de vivermos juntos e felizes para sempre!
-                </p>
-                <p>
+                   Sim! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós, realizando um pequeno evento para marcar nossa união!
+ 
                     A reunião será bastante simples e para pouquíssimos convidados, já que o nosso objetivo é, realmente, estar com aqueles que, de alguma forma, participaram da nossa história e torceram de perto por nós nesses quatro anos.
+ 
                     Como você pode imaginar, esse é um grande passo em nossas vidas e ficaremos muito felizes com a participação de cada convidado!
-                    Fizemos uma <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg"> LISTA DE PRESENÇA </a> para que possamos acompanhar quantas pessoas irão comparecer e quantos quitutes e bebidas devemos providenciar! 
-                    Por gentileza, acesse a lista e inclua o seu nome e o nome de alguma pessoa que eventualmente te acompanhe! =D
                 </p>
                 <p>
+                    Fizemos uma <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg"> LISTA DE PRESENÇA </a> para que possamos acompanhar quantas pessoas irão comparecer e quantos quitutes e bebidas devemos providenciar!
+ 
+                    Por gentileza, acesse o link e inclua o seu nome e o nome de alguma pessoa que possa, eventualmente, te acompanhar! =D
+ 
                     E, como nem só de pão vive o homem (trocadilhos a parte! rsrs), aproveitamos essa oportunidade para deixar aqui embaixo os links das nossas listas de presentes, elaboradas em três diferentes lugares para atender a todos os gostos!
+ 
                     Sinta-se à vontade para nos ajudar a preencher nosso lar, sabendo que cada detalhe será muito bem-vindo! Com os mimos e a participação de cada um, montaremos o cantinho no qual viveremos felizes e nos lembraremos com muito carinho desse momento especial!!
                 </p>
+                </h5>
+                    Ah, espera aí! As novidades ainda não acabaram!
+                </h4>
+                <p>
+                    Gostaríamos que soubesse que se você está recebendo esse convite virtual é porque, dentro do que planejamos para a nossa união, te consideramos muito mais do que um simples convidado!
+ 
+                    Como dissemos, esse pequeno evento é para que possamos estar com aqueles que participaram da nossa história e que torceram de perto por nós.
+ 
+                    Mas, mais do que a participação que você teve até agora em nossas vidas, gostaríamos de te convidar para apadrinhar a nossa união!
+ 
+                    Embora não se trate de uma festa de casamento, praticamente todos os que estarão presentes são, para nós, padrinhos que, de alguma forma (com palavras, gestos, carinho, torcida, incentivo, paciência etc) nos ajudaram a chegar nesse dia – e que queremos que continuem nessa missão por toda a vida!
+ 
+                    E você sabe o que significa ser padrinho ou madrinha de um casamento?
+ 
+                    A tradição da escolha de um padrinho é um costume que remonta à antiguidade, na qual se escolhia um bom amigo, na maioria das vezes um guerreiro tribal, para ajudar a proteger a noiva de possíveis raptores, conhecidos por rondarem o local da cerimônia.
+ 
+                    Já na definição trazida pelo dicionário, a palavra “padrinho” significa testemunha de batismo, casamento ou duelo.
+ 
+                    Nesse contexto, é preciso dizer que, segundo a crença cristã, o casamento é a constituição de uma nova sociedade conjugal e familiar que se agregará à sociedade, fazendo-a crescer, razão pela qual deve ser resguardado e bem conduzido – e é justamente aí que entra o papel do padrinho!
+ 
+                    No caso dos padrinhos de casamento, estes se constituem em pais e mães espirituais, que tem por tarefa compartilhar ensinamentos de vida para a melhor condução do relacionamento, orientando o casal, auxiliando na resolução de problemas, proferindo palavras de paz, equilíbrio, incentivo e amor.
+ 
+                    Os padrinhos, assim, são escolhidos para testemunhar e abençoar a união do casal, passando a fazer parte da vida dos noivos, com a eterna função de estar ao lado do casal e primar pela manutenção e pelo sucesso do casamento.
+ 
+                    Assim, mesmo quando você sequer desconfiava, nós valorizávamos cada conversa, comentário, gesto ou incentivo dado ao longo desses quatro anos, passando a te ver como alguém que contribuiu para chegarmos até aqui!
+ 
+                    Esperamos que você goste do convite e que saiba que ficaremos muito felizes se pudermos contar com você - não apenas nessa pequena confraternização, mas ao longo de nossas vidas, como verdadeiro guia!
+                </p>
+                <h4>
+                    E aí, topa?
+                    Esperamos sua confirmação! ;D
+                </h4>
             </div>
         </div>
     </section>
