--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,44 +3,31 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>
-                    Você está convidado para o mais lindo evento das nossas vidas!
+                    VOCÊ ESTÁ CONVIDADO PARA O CHÁ DOS NOIVOS MAIS GOSTOSO E DIVERTIDO DO ANO!
                 </h2>
-                <h3>
-                    E aí, já sabe do que se trata?
-                </h3>
                 <p>
-                    Sim! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós, realizando um pequeno evento para marcar nossa união!
+                    É isso mesmo! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós, realizando um pequeno chá para marcar nossa união!
                 </p>
                 <p>
-                    A reunião será bastante simples e para pouquíssimos convidados, já que o nosso objetivo é, realmente, estar com aqueles que, de alguma forma, participaram da nossa história e torceram de perto por nós nesses quatro anos.
+                    Iremos nos casar no dia 17/02/2017 e, como optamos por não realizar uma festa de casamento, faremos o Chá dos Noivos no dia 11/02/2017 para comemorar. Esse Chá é uma mistura de chá bar, chá de panela, chá de lingerie, chá de boteco e despedida de solteiro - tudo junto e misturado, pra curtirmos o momento! xD
                 </p>
                 <p>
-                    Como você pode imaginar, esse é um grande passo em nossas vidas e ficaremos muito felizes com a participação de cada convidado!
+                    Como você pode imaginar, o casamento é um grande passo em nossas vidas e ficaremos muito felizes com a participação de cada convidado!
                 </p>
                 <p>
-                    Fizemos uma <a href="https://goo.gl/forms/t7poHoKJQHL75gfy2" target="_blank" class="btn btn-default btn-lg"> LISTA DE PRESENÇA </a> para que possamos acompanhar quantas pessoas irão comparecer e quantos quitutes e bebidas devemos providenciar!
-                </p>
-                <p>
-                    Por gentileza, acesse o link e inclua o seu nome e o nome de alguma pessoa que possa, eventualmente, te acompanhar! =D
-                </p>
-                <p>
-                    E, como nem só de pão vive o homem (trocadilhos a parte! rsrs), aproveitamos essa oportunidade para deixar aqui embaixo os links das nossas listas de presentes, elaboradas em três diferentes lugares para atender a todos os gostos!
-                </p>
-                <p>
-                    Sinta-se à vontade para nos ajudar a preencher nosso lar, sabendo que cada detalhe será muito bem-vindo! Com os mimos e a participação de cada um, montaremos o cantinho no qual viveremos felizes e nos lembraremos com muito carinho desse momento especial!!
+                    E, como nem só de pão vive o homem (trocadilhos a parte! rsrs), sinta-se à vontade para nos ajudar a preencher nosso lar, sabendo que cada detalhe será muito bem-vindo! Com os mimos e a participação de cada um, montaremos o cantinho no qual viveremos felizes e nos lembraremos com muito carinho desse momento especial!!
                 </p>
                 <h4>
-                    Ah, espera aí! As novidades ainda não acabaram!
+                    AH, ESPERA AÍ! AS NOVIDADES AINDA NÃO ACABARAM!
                 </h4>
                 <p>
                     Gostaríamos que soubesse que se você está recebendo esse convite virtual é porque, dentro do que planejamos para a nossa união, te consideramos muito mais do que um simples convidado!
                 </p>
                 <p>
-                    Como dissemos, esse pequeno evento é para que possamos estar com aqueles que participaram da nossa história e que torceram de perto por nós.
-                    Mas, mais do que a participação que você teve até agora em nossas vidas, gostaríamos de te convidar para apadrinhar a nossa união!
+                    Como dissemos, o nosso Chá dos Noivos é para que possamos estar com aqueles que participaram da nossa história e que torceram de perto por nós. Mas, mais do que a participação que você teve até agora em nossas vidas, gostaríamos de te convidar para apadrinhar a nossa união!
                 </p>
                 <p>
-                    Embora não se trate de uma festa de casamento, praticamente todos os que estarão presentes são, para nós, padrinhos que, de alguma forma (com palavras, gestos, carinho, torcida, incentivo, paciência etc) nos ajudaram a chegar nesse dia – e que queremos que continuem nessa missão por toda a vida!
+                    Embora a gente não vá fazer uma festa de casamento, todos os que estarão presentes no nosso Chá são, para nós, padrinhos que, de alguma forma (com palavras, gestos, carinho, torcida, incentivo, paciência, etc) nos ajudaram a chegar nesse dia – e que queremos que continuem nessa missão por toda a vida!
                 </p>
                 <p>
                     E você sabe o que significa ser padrinho ou madrinha de um casamento?
@@ -62,8 +49,7 @@
                     Esperamos que você goste do convite e que saiba que ficaremos muito felizes se pudermos contar com você - não apenas nessa pequena confraternização, mas ao longo de nossas vidas, como verdadeiro guia!
                 </h4>
                 <h3>
-                    E aí, topa?
-                    Esperamos sua confirmação! ;D
+                    E aí, topa? ;D
                 </h3>
             </div>
         </div>
