--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,8 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Data e Localização</h2>
-                <p>Nosso casamento será realizado no dia 17/02/2017, na Rua São Jorge, 604, apartamento 26B, Espaço Cerâmica, São Caetano do Sul, CEP: 09530-250 </p>
-                <p>Os presentes podem ser entregues, em horário comercial, no nosso prédio. Em caso de itens grandes =D, entre entre em contato com a gente antes!</p>
+                <p>Nosso Chá dos Noivos será realizado no dia 11/02/2017, na Rua São Jorge, 604, Espaço Cerâmica, São Caetano do Sul</p>
                 <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
                 <!--
                 <ul class="list-inline banner-social-buttons">
