nova pagina inicial

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>
-                    VOCÊ ESTÁ CONVIDADO PARA O CHÁ DOS NOIVOS MAIS GOSTOSO E DIVERTIDO DO ANO!
+                    VOCÊ ESTÁ CONVIDADO PARA O CHÁ DOS NOIVOS MAIS DIVERTIDO DO ANO!
                 </h2>
                 <p>
                     É isso mesmo! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós, realizando um pequeno chá para marcar nossa união!
