nova pagina inicial

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,13 +6,13 @@
                     VOCÊ ESTÁ CONVIDADO PARA O CHÁ DOS NOIVOS MAIS DIVERTIDO DO ANO!
                 </h2>
                 <p>
-                    É isso mesmo! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós, realizando um pequeno chá para marcar nossa união!
+                    É isso mesmo! Estamos nos casando e gostaríamos de compartilhar esse momento de alegria, paixão e muito amor com algumas das pessoas mais queridas por nós, realizando um pequeno Chá para marcar nossa união!
                 </p>
                 <p>
                     Iremos nos casar no dia 17/02/2017 e, como optamos por não realizar uma festa de casamento, faremos o Chá dos Noivos no dia 11/02/2017.
                 </p>
                 <p>
-                    Esse Chá é uma mistura de Chá Bar, Chá de Panela, Chá de Lingerie, Chá de Boteco e Despedida de Solteiro - tudo junto e misturado, pra curtirmos o momento! xD
+                    Esse Chá é uma mistura de Chá Bar, Chá de Panela, Chá de Lingerie, Chá de Boteco e Despedida de Solteiro - tudo junto e misturado, para curtirmos o momento! xD
                 </p>
                 <p>
                     Como você pode imaginar, o casamento é um grande passo em nossas vidas e ficaremos muito felizes com a participação de cada convidado!
