nova pagina inicial

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Data e Localização</h2>
-                <p>Nosso Chá dos Noivos será realizado no dia 11/02/2017, na Rua São Jorge, 604, Espaço Cerâmica, São Caetano do Sul</p>
+                <p>Nosso Chá dos Noivos será realizado no dia 11/02/2017, a partir das 15 horas, na Rua São Jorge, 604, Espaço Cerâmica, São Caetano do Sul</p>
                 <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
                 <!--
                 <ul class="list-inline banner-social-buttons">
