--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,6 +20,9 @@
                 <p>
                     E, como nem só de pão vive o homem (trocadilhos a parte! rsrs), sinta-se à vontade para nos ajudar a preencher nosso lar, sabendo que cada detalhe será muito bem-vindo! Com os mimos e a participação de cada um, montaremos o cantinho no qual viveremos felizes e nos lembraremos com muito carinho desse momento especial!!
                 </p>
+                <p>
+                    E um recado especial para as meninas: também tem lista em qualquer loja física da Any Any! Basta dar o nome da noiva e entrar na brincadeira!
+                </p>                
                 <h4>
                     AH, ESPERA AÍ! AS NOVIDADES AINDA NÃO ACABARAM!
                 </h4>
