--- a/_includes/download.html
+++ b/_includes/download.html
@@ -9,7 +9,7 @@
                     <p></p>
                     <a href="http://www2.zelo.com.br/weddinglistProducts.aspx?id=76637&idproduct=&qty=" target="_blank" class="btn btn-default btn-lg">Lista na Zelo</a> 
                     <p></p>
-                    <a href="http://www.anyany.com.br/institucional/nossas-lojas" target="_blank" class="btn btn-default btn-lg">Lista nas lojas físicas da AnyAny</a> 
+                    <a href="http://www.anyany.com.br/institucional/nossas-lojas" target="_blank" class="btn btn-default btn-lg">Lista na Any Any</a> 
                 </div>
             </div>
         </div>
